Java 21: SequencedCollection