@@ -432,13 +432,13 @@ public class FlatFileDataStore extends DataStore
                 {
                     ArrayList<Long> out_parentID = new ArrayList<>();  //hacky output parameter
                     Claim claim = this.loadClaim(files[i], out_parentID, claimID);
-                    if (out_parentID.isEmpty() || out_parentID.get(0) == -1)
+                    if (out_parentID.isEmpty() || out_parentID.getFirst() == -1)
                     {
                         this.addClaim(claim, false);
                     }
                     else
                     {
-                        orphans.put(claim, out_parentID.get(0));
+                        orphans.put(claim, out_parentID.getFirst());
                     }
                 }
 
